posiGen_FullsendBox/src/objects/Energy_Efficiency__c.object
<CustomObject>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <formula>Install__r.Account.BillingStreet + BR() +
Install__r.Account.BillingCity + &quot;, &quot; + Install__r.Account.BillingState + &quot;, &quot; + Install__r.Account.BillingPostalCode + BR()+
Install__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADDRESS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Unique customer identifying number</description>
        <inlineHelpText>Unique customer identifying number</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.OwnerId</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Energy_Efficiency</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Audit_Dropbox_link__c</fullName>
        <inlineHelpText>Enter in link to Dropbox folder</inlineHelpText>
        <label>Audit Dropbox link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Audit_process__c</fullName>
        <inlineHelpText>Where in the Audit process is the client?</inlineHelpText>
        <label>Audit process</label>
        <picklist>
            <picklistValues>
                <fullName>Called</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment needs more info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called multiple times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC pass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Notes__c</fullName>
        <inlineHelpText>Anything someone working with the homeowner should know at a glance?</inlineHelpText>
        <label>Auditor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic_quality_score__c</fullName>
        <description>Formula field to determine the completeness of a job using the regular fields. Measures whether , assigned, completed and approved dates are filled in on a scale of 0-6. Higher score is worse</description>
        <formula>if(text(EA_Auditor__c)=&quot;&quot;,0,1) + IF( ISBLANK(EA_Assigned_date__c ) , 0, 1) +
 IF( ISBLANK(EA_Completed_date__c ) , 0, 1) + IF( ISBLANK(EA_Approved_Date__c ) , 0, 1) + if(text( EU_contractor__c )=&quot;&quot;,0,1) + IF( ISBLANK(EU_assigned_date__c ) , 0, 1) + IF( ISBLANK(EU_Completed_date__c ) , 0, 1) + IF( ISBLANK(EU_Invoice_Approval_Date__c ) , 0, 1)</formula>
        <inlineHelpText>Formula field to determine the completeness of a job using the regular fields. Measures whether, assigned, completed and approved dates are filled in on a scale of 0-6. Higher score is worse</inlineHelpText>
        <label>Basic quality score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clearesult_Submission_Date__c</fullName>
        <label>Clearesult Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_s_Notes__c</fullName>
        <inlineHelpText>Anything someone working with the homeowner should know at a glance?</inlineHelpText>
        <label>Contractor&apos;s Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Survey__c</fullName>
        <label>Customer Service Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Exuberant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Complaint</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Survey_Notes__c</fullName>
        <inlineHelpText>Any comments worth noting from the result of the survey performed.</inlineHelpText>
        <label>Customer Survey Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_bw_EA_and_EU__c</fullName>
        <formula>EU_Completed_date__c -  EA_Completed_date__c</formula>
        <inlineHelpText>Days between the Energy Audit and the Upgrade completion</inlineHelpText>
        <label>Days bw EA and EU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_bw_EUA_and_EUC__c</fullName>
        <formula>EU_Completed_date__c  -  EU_assigned_date__c</formula>
        <inlineHelpText>Days between when an EU is assigned and it is completed</inlineHelpText>
        <label>Days bw EUA and EUC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_bw_EU_released_and_invoice_paid__c</fullName>
        <description>Days between invoice submitted and approved</description>
        <formula>EU_Invoice_Approval_Date__c - EU_Invoice_Date__c</formula>
        <inlineHelpText>Days between invoice submitted and approved</inlineHelpText>
        <label>Days bw EU released and invoice paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_EA__c</fullName>
        <description>Days since the Energy Assessment has been completed</description>
        <formula>TODAY()  -  EA_Completed_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since the Energy Assessment has been completed</inlineHelpText>
        <label>Days since EA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_EU__c</fullName>
        <formula>TODAY()  -  EU_Completed_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since the EU has been assigned</inlineHelpText>
        <label>Days since EU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_EU_assigned__c</fullName>
        <description>Days since EU assigned</description>
        <formula>TODAY() - EU_assigned_date__c</formula>
        <inlineHelpText>Days since EU assigned</inlineHelpText>
        <label>Days since EU assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_EU_rejected__c</fullName>
        <description>Days since EU rejected</description>
        <formula>TODAY() - EU_Invoice_Rejection_Date__c</formula>
        <inlineHelpText>Days since EU rejected</inlineHelpText>
        <label>Days since EU rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_audit_assigned__c</fullName>
        <formula>TODAY()  -  EA_Assigned_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since the EA has been assigned</inlineHelpText>
        <label>Days since audit assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Approved_Date__c</fullName>
        <inlineHelpText>All Energy Audit paperwork is present and correct, ready to be released for the work.</inlineHelpText>
        <label>EA Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Assigned_date__c</fullName>
        <inlineHelpText>Date that the address is assigned ot the auditor

This field will trigger an email alert when filled.</inlineHelpText>
        <label>EA Assigned date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Auditor__c</fullName>
        <inlineHelpText>Enter the name of the auditor</inlineHelpText>
        <label>EA Auditor</label>
        <picklist>
            <picklistValues>
                <fullName>John Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adrian Manriquez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debra Cassisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Killen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. Green Jeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Haag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Lukes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Julie Tweeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joey Giusti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason Castillion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Pino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Gostisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Sharp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcus Rozbitsky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Haley</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EA_Completed_date__c</fullName>
        <inlineHelpText>Date the Energy Audit is completed.</inlineHelpText>
        <label>EA Completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Invoice_Date__c</fullName>
        <inlineHelpText>Date that an outside auditor will invoice for an audit completed.</inlineHelpText>
        <label>EA Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Invoice_Number__c</fullName>
        <inlineHelpText>Invoice number that is associated with an outside auditor completing an audit.</inlineHelpText>
        <label>EA Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Invoice_Rejection_Date__c</fullName>
        <description>Energy Audit Rejection Date</description>
        <label>EA Invoice Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_QC_date__c</fullName>
        <inlineHelpText>Date the QC was conducted. Place earliest date in case of multiple visits</inlineHelpText>
        <label>EA QC date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Rebate_Check_Number__c</fullName>
        <inlineHelpText>Check number associated with the audit rebate.</inlineHelpText>
        <label>EA Rebate Check Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Rebate_Received_date__c</fullName>
        <inlineHelpText>Date that the rebate for the Energy Audit comes in.</inlineHelpText>
        <label>EA Rebate Received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Rejection_Notes__c</fullName>
        <label>EA Rejection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_rebate_submitted_date__c</fullName>
        <label>EA_Rebate submitted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Solar_product__c</fullName>
        <description>includes(Text(Install__r.Solar_Product__C,&quot;Efficiency&quot;)) to show if EE record has Energy efficiency selected</description>
        <formula>includes(Install__r.Solar_Product__c,&quot;Energy Efficiency&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A check means the item has energy efficiency selected in the Install. Formula field, cannot be edited from EE object</inlineHelpText>
        <label>EE Solar product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EE_released_date__c</fullName>
        <inlineHelpText>Date that the address is released to the EE department</inlineHelpText>
        <label>EE released date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Clearesult_Rebate_Amt__c</fullName>
        <description>Energy Upgrade rebate amount</description>
        <label>EU Clearesult Rebate Amt.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Completed_date__c</fullName>
        <inlineHelpText>Enter the date the upgrade was completed</inlineHelpText>
        <label>EU Completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Completion_Due_Date__c</fullName>
        <label>EU Completion Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Invoice_Approval_Date__c</fullName>
        <label>EU Invoice Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Invoice_Date__c</fullName>
        <inlineHelpText>Date that the work performed on the house was invoiced for by an outside contractor.</inlineHelpText>
        <label>EU Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Invoice_Number__c</fullName>
        <label>EU Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Invoice_Rejection_Date__c</fullName>
        <inlineHelpText>Date that the upgrade work invoiced for is not approved by the EE Admin for payment. This can be for incomplete work, missing paperwork, etc.

This field will trigger an email alert after data is entered</inlineHelpText>
        <label>EU Invoice Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Amount__c</fullName>
        <inlineHelpText>Amount of money received in the form of a rebate from energy upgrades performed at the residence.</inlineHelpText>
        <label>EU Rebate Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Check_Number__c</fullName>
        <inlineHelpText>Check number associated with the upgrade rebate.</inlineHelpText>
        <label>EU Rebate Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Received_Date__c</fullName>
        <inlineHelpText>Date that the rebate for the Energy Upgrade work performed on the house is received.</inlineHelpText>
        <label>EU Rebate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Rebate_Submission_Date__c</fullName>
        <inlineHelpText>Date that the rebate for the Energy Upgrade work performed on the house is submitted for.</inlineHelpText>
        <label>EU Rebate Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Rejection_Notes__c</fullName>
        <inlineHelpText>The reason why an address is not approved for payment.</inlineHelpText>
        <label>EU Rejection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU_Scheduled_date__c</fullName>
        <inlineHelpText>Date the EU is scheduled</inlineHelpText>
        <label>EU Scheduled date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_assigned_date__c</fullName>
        <inlineHelpText>Address and paperwork released to contractor for work to be performed.</inlineHelpText>
        <label>EU assigned date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_contractor__c</fullName>
        <inlineHelpText>Contractor that is performing the work on the house.</inlineHelpText>
        <label>EU contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Retro Fitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. Green Jeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnviroGreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebirth Energy Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tweets techs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posigen All-Stars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fontenot Insulation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Account__r.PersonEmail</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Status__c</fullName>
        <inlineHelpText>Status of what stage the house is at in the EE Process

This field may trigger an SMS message when given a value.</inlineHelpText>
        <label>Energy Efficiency Status</label>
        <picklist>
            <picklistValues>
                <fullName>Released to Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released to EE Upgrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to be Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Release to Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Release to EE Upgrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on EU Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Accomplished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GG_Number__c</fullName>
        <formula>Install__r.GG_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GG Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for Geopointe</description>
        <inlineHelpText>Don&apos;t worry about it</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipName>Energy_Efficiency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hot_water_heater__c</fullName>
        <formula>TEXT( Install__r.Hot_Water_Heater__c)</formula>
        <inlineHelpText>Type of hot water heater observed at Sales</inlineHelpText>
        <label>Hot water heater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Numeric_ID__c</fullName>
        <formula>Install__r.Numeric_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install__c</fullName>
        <label>Install</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Energy_Efficiency</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Rejection_Date__c</fullName>
        <label>Invoice Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KDH_Number__c</fullName>
        <formula>Install__r.KDH_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KDH Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_mailed_date__c</fullName>
        <inlineHelpText>Representative was unable to reach the homeowner for a survey. A letter is sent providing homeowner opportunity to reach back out if there is a problem, otherwise, we will assume satisfaction.</inlineHelpText>
        <label>Letter mailed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Low_income_funding_source__c</fullName>
        <description>Picklist of funding sources for a low income project. Select this field when the client is in a low-income track</description>
        <inlineHelpText>Picklist of funding sources for a low income project. Select this field when the client is in a low-income track</inlineHelpText>
        <label>Low income funding source</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Smart East Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Smart West Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <formula>Install__r.Mobile_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_contract_marker__c</fullName>
        <formula>if( Install__r.Amount  &gt; 26799, IMAGE(&quot;servlet/servlet.FileDownload?file=015d00000032vZs&quot;, &quot;MP&quot;, 100, 100),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New contract marker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_ID__c</fullName>
        <externalId>true</externalId>
        <label>Numeric ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Numeric_ID__c</fullName>
        <formula>VALUE( Install__r.Numeric_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Penalty_Amount__c</fullName>
        <inlineHelpText>Outside contractors can be penalized for any number of things. Most commonly it has to do with a violation of the standard operating procedure.</inlineHelpText>
        <label>Penalty Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalty_Amt__c</fullName>
        <label>Penalty Amt.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalty_Reason__c</fullName>
        <label>Penalty Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Quality Control should be performed on this particular house if this box is checked</inlineHelpText>
        <label>QC checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REMRate_Therms__c</fullName>
        <description>Therms saved determined by the REMRate Improvement Analysis</description>
        <inlineHelpText>Enter Therms saved</inlineHelpText>
        <label>REMRate Therms</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REM_KwH__c</fullName>
        <description>REMRate KwH savings.  Calculated from the Improvement Analysis report generated from REMRate.</description>
        <inlineHelpText>Enter in KwH savings from REMRate</inlineHelpText>
        <label>REM KwH</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REM__c</fullName>
        <description>REMRate percentage improvement. Value is inputted manually from the Improvement Analysis exported from before and after .blg files.</description>
        <inlineHelpText>Enter the percentage savings from REMRate</inlineHelpText>
        <label>REM percent imp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rebate_Check_Number__c</fullName>
        <label>Rebate Check Number</label>
        <length>25</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <formula>Account__r.Secondary_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_date__c</fullName>
        <inlineHelpText>Customer Service Survey is completed by the homeowner and has provided feedback of our EE service and solar overall.</inlineHelpText>
        <label>Survey date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testfield__c</fullName>
        <description>test to check the app</description>
        <inlineHelpText>testing to check the app</inlineHelpText>
        <label>Testfield</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Invoice_Date__c</fullName>
        <label>Upgrade Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Track__c</fullName>
        <inlineHelpText>Enter the appropriate upgrade track. Some houses may have more than one.</inlineHelpText>
        <label>Upgrade Track</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVR normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAZ Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard to reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVR Window tint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumber</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Upsell_Product_Opportunity__c</fullName>
        <inlineHelpText>Products and services the homeowner may be interested in in the future.</inlineHelpText>
        <label>Upsell Product Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Waived_Services__c</fullName>
        <label>Signed Waivers</label>
        <picklist>
            <picklistValues>
                <fullName>CAZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE rejection</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Work_Order_points__c</fullName>
        <description>Field to capture the amount of points on the work order. Work order values are around 1800, and are averaged every quarter to make sure that contractors are getting paid no more or no less than they are contracted for.</description>
        <inlineHelpText>Fill in points from the &quot;sushi&quot; tab</inlineHelpText>
        <label>Work Order points</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Install__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>EE Archive</label>
    <listViews>
        <fullName>Adrians_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Phone__c</columns>
        <columns>ADDRESS__c</columns>
        <columns>Auditor_Notes__c</columns>
        <columns>EA_Auditor__c</columns>
        <columns>EA_Completed_date__c</columns>
        <columns>EA_Assigned_date__c</columns>
        <columns>EU_assigned_date__c</columns>
        <columns>EA_Rebate_Received_date__c</columns>
        <columns>Zip__c</columns>
        <columns>New_contract_marker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EA_Completed_date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Audit_process__c</field>
            <operation>equals</operation>
        </filters>
        <label>Adrians View</label>
        <sharedTo>
            <group>EE_Assessors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ADDRESS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo/>
    </listViews>
</CustomObject>